# commonhuman-cli

./: .gitignore  README.md  pyproject.toml
src/commonhuman_cli/: __init__.py  colour.py  entrypoint.py  logging.py  output.py  prompts.py  report_html.py  report_sarif.py  reporter.py  severity.py
tests/: conftest.py
tests/fixtures/: conftest.py
tests/integration/: test_logging_integration.py
tests/regression/: test_proof_url.py  test_tty_redirect.py
tests/unit/: test_colour.py  test_entrypoint.py  test_logging.py  test_output.py  test_prompts.py  test_report_html.py  test_report_sarif.py  test_reporter.py  test_severity.py
