[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commonhuman-cli"
version = "0.1.6"
description = "Shared CLI/terminal UX primitives for CommonHuman-Lab tools"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.10"
authors = [
  { name = "CommonHuman-Lab" },
]
keywords = ["cli", "terminal", "ansi", "logging", "security", "pentest"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Terminals",
]
# Zero runtime dependencies — stdlib only.
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/commonhuman-lab/commonhuman-cli"
Issues   = "https://github.com/commonhuman-lab/commonhuman-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/commonhuman_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
markers   = [
  "unit:        isolated, no I/O",
  "integration: multi-component, may emit to stdout",
  "regression:  behavioural contracts from migrated tools",
]

[tool.coverage.run]
source = ["src/commonhuman_cli"]

[tool.coverage.report]
fail_under    = 100
exclude_lines = [
  "if TYPE_CHECKING:",
  "\\.\\.\\.",
  "@overload",
]

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version       = "3.10"
strict               = false
ignore_missing_imports = true
warn_return_any      = true
warn_unused_ignores  = true
